syntax = "proto3";

package order;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/LavaJover/shvark-order-service/proto/gen;orderpb";

service DeviceService {
    rpc CreateDevice (CreateDeviceRequest) returns (CreateDeviceResponse);
    rpc GetTraderDevices (GetTraderDevicesRequest) returns (GetTraderDevicesResponse);
    rpc DeleteDevice (DeleteDeviceRequest) returns (DeleteDeviceResponse);
    rpc EditDevice (EditDeviceRequest) returns (EditDeviceResponse);

    // Статус устройств
    rpc UpdateDeviceLiveness(UpdateDeviceLivenessRequest) returns (UpdateDeviceLivenessResponse);
    rpc GetDeviceStatus(GetDeviceStatusRequest) returns (GetDeviceStatusResponse);
    rpc GetTraderDevicesStatus(GetTraderDevicesStatusRequest) returns (GetTraderDevicesStatusResponse);
}

// ==================== DEVICE STATUS ====================

message UpdateDeviceLivenessRequest {
    string device_id = 1;
}

message UpdateDeviceLivenessResponse {
    bool success = 1;
}

message GetDeviceStatusRequest {
    string device_id = 1;
}

message GetDeviceStatusResponse {
    string device_id = 1;
    bool online = 2;
    int64 last_ping = 3;        // Unix timestamp
    bool enabled = 4;
}

message GetTraderDevicesStatusRequest {
    string trader_id = 1;
}

message GetTraderDevicesStatusResponse {
    repeated DeviceStatus devices = 1;
}

message DeviceStatus {
    string device_id = 1;
    string device_name = 2;
    bool online = 3;
    int64 last_ping = 4;        // Unix timestamp
    bool enabled = 5;
}

message Device {
    string device_id = 1;
    string device_name = 2;
    string trader_id = 3;
    bool enabled = 4;

    bool device_online = 5;
    bool manually_unlocked = 6;

    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message CreateDeviceRequest {
    string device_name = 1;
    string trader_id = 2;
    bool enabled = 3;
    bool manually_unlocked = 7;
}

message CreateDeviceResponse {}

message GetTraderDevicesRequest {
    string trader_id = 1;
}

message GetTraderDevicesResponse {
    repeated Device devices = 1;
}

message EditDeviceParams {
    string device_name = 1;
    bool enabled = 2;
}

message EditDeviceRequest {
    string device_id = 1;
    EditDeviceParams params = 2;
}

message EditDeviceResponse {}

message DeleteDeviceRequest {
    string device_id = 1;
}

message DeleteDeviceResponse {}